add max and min daily temperature

--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>Use this site to get your weather</p>
+        <p>Use this site to get your weather, all temperates in celcius degrees.</p>
 
         <form>
             <input placeholder="Location">
@@ -19,7 +19,7 @@
         </form>
 
         <p id="message-1"></p>
-        <p id="message-2"></p>
+        <ul id="messages"></ul>
     </div>
 
     {{>footer}}
