--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -31,6 +31,11 @@ h1 {
   margin-bottom: 16px;
 }
 
+ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+
 header a {
   color: #888888;
   text-decoration: none;
