add repo url on footer

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -10,8 +10,8 @@
 <body>
     <div class="main-content">
         {{>header}}
-        <p>This site uses data from mapbox.com and openweathermap.com.</p>
-        <img class='portrait' src="/img/photo.jpg" />
+        <p>This site uses data from <a href="https://www.mapbox.com/" target="_blank">Mapbox</a> and <a
+                href="https://openweathermap.org/" target="_blank">OpenWeather</a>.</p>
     </div>
 
     {{>footer}}
