--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,3 +1,4 @@
 <footer>
-    <p>Created by {{name}}, contact info: tuliojose8@gmail.com</p>
+    <p>Created by {{name}}, <a href="https://github.com/TulioMolina/node-weather-app" target="_blank">GitHub
+            Repository</a></p>
 </footer>
